Fixed the spacing a bit.

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -19,7 +19,7 @@ em {
 
 .boards,
 .logos {
-    max-width: 1200px;
+    max-width: 1248px;
 }
 
 .App > .footer {
